--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Caleb Hibbs</title>
 </head>
 <body>
+    <div>
+        <div id="header">
+            <img class="logoIMG" src="logo1.png" alt="user image">
+            <h1>Caleb Hibbs</h1>
+        </div>
+        <hr>
+    </div>
 
-    <img class="logoIMG" src="logo.png" alt="user image">
 
     <!-- <div id="test">
         <span>
