--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </div>
         <hr>
     </div>
+    <div>
+        <img class="main" src="hibbs.jpg">
+        
+    </div>
+    <hr>
+
 
 
     <!-- <div id="test">
