--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
         </div>
         <hr>
     </div>
-    <div>
-        <img class="main" src="hibbs.jpg">
-        
+    <div id="content">
+        <div id="nav">
+            <button id="homeBTN">Home</button>
+            <button id="croquisBTN">Croquis</button>
+        </div>
+
+        <div id="main">
+            <img class="main" src="hibbs.jpg">
+        </div>
+        <div id="croq" class="Hide">
+
+            <img src="dark.jpeg" class="test Hide">
+            <img src="light.jpeg" class="test Show">
+            <button id="Croquis">Croquis</button>
+        </div>
+
     </div>
     <hr>
 
@@ -62,5 +75,6 @@
     <a href="https://www.instagram.com/">CLI!</a>
 
     <a href="https://www.apple.com/">THIS IS TEXT</a> -->
+    <script src="app.js"></script>
 </body>
 </html>
