Adding final section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="homeBTN">Home</button>
             <button id="croquisBTN">Croquis</button>
             <button id="portfolioBTN">Portfolio</button>
+            <button id="finalBTN">Final</button>
         </div>
 
         <div id="main">
@@ -61,7 +62,54 @@
             <img src="portfolio/IMG_5122.jpeg" class="testy">
             
         </div>
+        <div id="final" class="Hide">
+            <div class="section">
+                <img src="final/First on Page.png" class="testy">
+                <h3>A new take on traditional<br> Mens wear</h3>
+            </div>
+            <div class="section">
+                <h3>Leather Bag, by Meanwhile</h3>
+                <img src="final/Second on Page.jpeg" class="testy">
+            </div>
+            <div class="section">
+                <img src="final/Third on Page.png" class="testy">
+                <h3>A simple silhouette in black and white</h3>
+            </div>
+            <div class="Ssection">
+                <h3>Workwear for the country of today</h3>
+                <img src="final/Fourth on page.png" id="fourth">
+            </div>
+            <div class="section">
+                <img src="final/Fifth on Page.png" class="testy">
+                <h3>Cream and Green, a rear window scene</h3>
+            </div>
+            <div class="section">
+                <h3>A wicked wonder walked on Wednesday</h3>
+                <img src="final/Sixth on Page.jpeg" class="testy">
+            </div>
+            <div class="section">
+                <img src="final/seventh on Page.png" class="testy">
+                <h3>Kylie Jenner, Met 2023</h3>
+            </div>
 
+            <div class="section">
+                <h3>Fashion Flats</h3>
+                <img src="final/Eighth on page.jpg" class="testy" id="flats">
+            </div>
+            <div class="section">
+                <img src="final/Nineth On page.png" id="truck">
+                <h3>Green Truck Leo</h3>
+            </div>
+            
+            <div class="section">
+                <h3>Performance Art: The stains of life</h3>
+                <video controls="controls" width="400" height="300" name="Video Name">
+                    <source src="Final/Tenth On page.MOV">
+                  </video>
+            </div>
+
+
+        </div>
 
 
     </div>
