--- a/index.html
+++ b/index.html
@@ -64,40 +64,40 @@
         </div>
         <div id="final" class="Hide">
             <div class="section">
-                <img src="final/First on Page.png" class="testy">
+                <img src="Final/First on Page.png" class="testy">
                 <h3>A new take on traditional<br> Mens wear</h3>
             </div>
             <div class="section">
                 <h3>Leather Bag, by Meanwhile</h3>
-                <img src="final/Second on Page.jpeg" class="testy">
+                <img src="Final/Second on Page.jpeg" class="testy">
             </div>
             <div class="section">
-                <img src="final/Third on Page.png" class="testy">
+                <img src="Final/Third on Page.png" class="testy">
                 <h3>A simple silhouette in black and white</h3>
             </div>
             <div class="Ssection">
                 <h3>Workwear for the country of today</h3>
-                <img src="final/Fourth on page.png" id="fourth">
+                <img src="Final/Fourth on page.png" id="fourth">
             </div>
             <div class="section">
-                <img src="final/Fifth on Page.png" class="testy">
+                <img src="Final/Fifth on Page.png" class="testy">
                 <h3>Cream and Green, a rear window scene</h3>
             </div>
             <div class="section">
                 <h3>A wicked wonder walked on Wednesday</h3>
-                <img src="final/Sixth on Page.jpeg" class="testy">
+                <img src="Final/Sixth on Page.jpeg" class="testy">
             </div>
             <div class="section">
-                <img src="final/seventh on Page.png" class="testy">
+                <img src="Final/seventh on Page.png" class="testy">
                 <h3>Kylie Jenner, Met 2023</h3>
             </div>
 
             <div class="section">
                 <h3>Fashion Flats</h3>
-                <img src="final/Eighth on page.jpg" class="testy" id="flats">
+                <img src="Final/Eighth on page.jpg" class="testy" id="flats">
             </div>
             <div class="section">
-                <img src="final/Nineth On page.png" id="truck">
+                <img src="Final/Nineth On page.png" id="truck">
                 <h3>Green Truck Leo</h3>
             </div>
             
@@ -108,9 +108,7 @@
                   </video>
             </div>
 
-
         </div>
-
 
     </div>
     <hr>
